[gd_scene load_steps=29 format=3 uid="uid://c8oqjfdesaslw"]

[ext_resource type="Script" uid="uid://didmwd12q752i" path="res://character_body_2d.gd" id="1_0xm2m"]
[ext_resource type="Texture2D" uid="uid://sf8st46g5f1t" path="res://charIdle.png" id="2_h2yge"]
[ext_resource type="Texture2D" uid="uid://s1rjw1jhf03l" path="res://charWalk.png" id="3_1bvp3"]
[ext_resource type="Script" uid="uid://ssk3dqqut13g" path="res://area_2d.gd" id="4_kek77"]
[ext_resource type="Script" uid="uid://c810mh8hf1c7o" path="res://fire.gd" id="5_272bh"]
[ext_resource type="Texture2D" uid="uid://ckr6ocd6s8a8d" path="res://Emblem2.png" id="5_dg77c"]
[ext_resource type="Texture2D" uid="uid://011wyai4df2k" path="res://tiletemp.png" id="7_5vw27"]
[ext_resource type="Script" uid="uid://diluan4gce6a1" path="res://Changelev1.gd" id="8_5vw27"]
[ext_resource type="Texture2D" uid="uid://dxuvi03jrvn32" path="res://floortexture.png" id="9_kek77"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1bvp3"]
radius = 16.0
height = 126.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1bvp3"]
atlas = ExtResource("2_h2yge")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lquwl"]
atlas = ExtResource("2_h2yge")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mycd"]
atlas = ExtResource("2_h2yge")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_272bh"]
atlas = ExtResource("2_h2yge")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vw27"]
atlas = ExtResource("3_1bvp3")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kek77"]
atlas = ExtResource("3_1bvp3")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c57u"]
atlas = ExtResource("3_1bvp3")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_efxa6"]
atlas = ExtResource("3_1bvp3")
region = Rect2(384, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_5vw27"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bvp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lquwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mycd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_272bh")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vw27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kek77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c57u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efxa6")
}],
"loop": true,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4c57u"]
radius = 200.04

[sub_resource type="AtlasTexture" id="AtlasTexture_come4"]
atlas = ExtResource("5_dg77c")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8e4i"]
atlas = ExtResource("5_dg77c")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lmeg"]
atlas = ExtResource("5_dg77c")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cp0l"]
atlas = ExtResource("5_dg77c")
region = Rect2(384, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_d2t1y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_come4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8e4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lmeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cp0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8e4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lmeg")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gngh3"]
radius = 32.280025

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5vw27"]
texture = ExtResource("7_5vw27")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_5vw27"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_5vw27")

[node name="Main" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="." groups=["Player"]]
script = ExtResource("1_0xm2m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CapsuleShape2D_1bvp3")

[node name="Camera2D" type="Camera2D" parent="Player"]
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_horizontal_offset = -0.52
drag_vertical_offset = -0.82

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_5vw27")
autoplay = "default"
frame_progress = 0.6253754

[node name="Area2D" type="Area2D" parent="Player"]
script = ExtResource("4_kek77")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource("CircleShape2D_4c57u")

[node name="Fire" type="CharacterBody2D" parent="Player"]
script = ExtResource("5_272bh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player/Fire"]
position = Vector2(-200, 0)
sprite_frames = SubResource("SpriteFrames_d2t1y")
autoplay = "default"
frame_progress = 0.69044185

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Fire"]
position = Vector2(-200, 0)
shape = SubResource("CircleShape2D_gngh3")

[node name="Fire2" type="CharacterBody2D" parent="Player"]
script = ExtResource("5_272bh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player/Fire2"]
position = Vector2(0, 200)
sprite_frames = SubResource("SpriteFrames_d2t1y")
autoplay = "default"
frame_progress = 0.17470767

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Fire2"]
position = Vector2(0, 200)
shape = SubResource("CircleShape2D_gngh3")

[node name="Fire3" type="CharacterBody2D" parent="Player"]
script = ExtResource("5_272bh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player/Fire3"]
position = Vector2(200, 0)
sprite_frames = SubResource("SpriteFrames_d2t1y")
autoplay = "default"
frame_progress = 0.2855156

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Fire3"]
position = Vector2(200, 0)
shape = SubResource("CircleShape2D_gngh3")

[node name="Fire4" type="CharacterBody2D" parent="Player"]
script = ExtResource("5_272bh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player/Fire4"]
position = Vector2(0, -200)
sprite_frames = SubResource("SpriteFrames_d2t1y")
autoplay = "default"
frame_progress = 0.008029188

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Fire4"]
position = Vector2(0, -200)
shape = SubResource("CircleShape2D_gngh3")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_5vw27")
format = 2
layer_0/tile_data = PackedInt32Array(1638390, 0, 1, 1638391, 0, 1, 1638392, 0, 1, 1703929, 0, 1, 1703930, 0, 1, 1703931, 0, 1, 1703932, 0, 1, 1703933, 0, 1, 1638398, 0, 1, 1638399, 0, 1, 1572864, 0, 1, 1572865, 0, 1, 1572866, 0, 1, 1572867, 0, 1, 1572868, 0, 1, 1507333, 0, 1, 1572869, 0, 1, 1572870, 0, 1, 1572871, 0, 1, 1572872, 0, 1, 1572873, 0, 1, 1572874, 0, 1, 1572875, 0, 1, 1572876, 0, 1, 1572877, 0, 1, 1572878, 0, 1, 1507343, 0, 1, 1507344, 0, 1, 1507345, 0, 1, 1507346, 0, 1, 1507347, 0, 1, 1507348, 0, 1, 1507349, 0, 1, 1572885, 0, 1, 1572886, 0, 1, 1572887, 0, 1, 1507352, 0, 1, 1507353, 0, 1, 1507354, 0, 1, 1507355, 0, 1, 1507356, 0, 1, 1507357, 0, 1, 1507358, 0, 1, 1507359, 0, 1, 1507360, 0, 1, 1507361, 0, 1, 1507362, 0, 1, 1507363, 0, 1, 1507364, 0, 1, 1507365, 0, 1, 1507366, 0, 1, 1507367, 0, 1, 1507368, 0, 1, 1507369, 0, 1, 1441834, 0, 1, 1441835, 0, 1, 1441836, 0, 1, 1441837, 0, 1, 1441838, 0, 1, 1441839, 0, 1, 1441840, 0, 1, 1441841, 0, 1, 1441842, 0, 1, 1441843, 0, 1, 1441844, 0, 1, 1441845, 0, 1, 1441846, 0, 1, 1441847, 0, 1, 1441848, 0, 1, 1441849, 0, 1, 1441850, 0, 1, 1441851, 0, 1, 1441852, 0, 1, 1507388, 0, 1, 1507389, 0, 1, 1441854, 0, 1, 1441855, 0, 1, 1441856, 0, 1, 1441857, 0, 1, 1441858, 0, 1, 1441859, 0, 1, 1376323, 0, 1, 1376324, 0, 1, 1376322, 0, 1, 1703926, 0, 1, 1703925, 0, 1, 1703924, 0, 1, 1703923, 0, 1, 1769458, 0, 1, 1769457, 0, 1, 1769456, 0, 1, 1769455, 0, 1, 1834990, 0, 1, 1900525, 0, 1, 1900524, 0, 1, 1900523, 0, 1, 1900522, 0, 1, 1900521, 0, 1, 1900520, 0, 1, 1900519, 0, 1, 1900518, 0, 1, 1900517, 0, 1, 1900516, 0, 1, 1900515, 0, 1, 1900514, 0, 1, 1900513, 0, 1, 1900512, 0, 1, 1900511, 0, 1, 1834974, 0, 1, 1834973, 0, 1, 1769437, 0, 1, 1769436, 0, 1, 1703899, 0, 1, 1703898, 0, 1, 1638361, 0, 1, 1638360, 0, 1, 1572824, 0, 1, 1572823, 0, 1, 1507286, 0, 1, 1441750, 0, 1, 1376214, 0, 1, 1310677, 0, 1, 1245141, 0, 1, 1179605, 0, 1, 1114068, 0, 1, 1048532, 0, 1, 982996, 0, 1, 917460, 0, 1, 851924, 0, 1, 786388, 0, 1, 720852, 0, 1, 720851, 0, 1, 655315, 0, 1, 589779, 0, 1, 524243, 0, 1, 458707, 0, 1, 393170, 0, 1, 327634, 0, 1, 262098, 0, 1, 196562, 0, 1, 131026, 0, 1, 65490, 0, 1, -46, 0, 1, -65582, 0, 1, -131118, 0, 1, -196654, 0, 1, -262190, 0, 1, -327726, 0, 1, -393261, 0, 1, -458797, 0, 1, -524333, 0, 1, -589869, 0, 1, -655404, 0, 1, -720940, 0, 1, -786475, 0, 1, -852011, 0, 1, -917546, 0, 1, -983082, 0, 1, -1048618, 0, 1, -1048617, 0, 1, -1114153, 0, 1, -1114152, 0, 1, -1179688, 0, 1, -1179687, 0, 1, -1245223, 0, 1, -1245222, 0, 1, -1310758, 0, 1, -1310757, 0, 1, -1376293, 0, 1, -1376292, 0, 1, -1441827, 0, 1, -1441826, 0, 1, -1507362, 0, 1, -1507361, 0, 1, -1507360, 0, 1, -1572896, 0, 1, -1572895, 0, 1, -1572894, 0, 1, -1572893, 0, 1, -1572892, 0, 1, -1638427, 0, 1, -1638426, 0, 1, -1638425, 0, 1, -1638424, 0, 1, -1638423, 0, 1, -1638422, 0, 1, -1638421, 0, 1, -1638420, 0, 1, -1638419, 0, 1, -1638418, 0, 1, -1638417, 0, 1, -1638416, 0, 1, -1638415, 0, 1, -1638414, 0, 1, -1638413, 0, 1, -1638412, 0, 1, -1638411, 0, 1, -1572874, 0, 1, -1572873, 0, 1, -1572872, 0, 1, -1572871, 0, 1, -1572870, 0, 1, -1572869, 0, 1, -1507333, 0, 1, -1507332, 0, 1, -1507331, 0, 1, -1441794, 0, 1, -1441793, 0, 1, -1507328, 0, 1, -1507327, 0, 1, -1441790, 0, 1, -1441789, 0, 1, -1441788, 0, 1, -1441787, 0, 1, -1441786, 0, 1, -1441785, 0, 1, -1441784, 0, 1, -1441783, 0, 1, -1441782, 0, 1, -1441781, 0, 1, -1441780, 0, 1, -1441779, 0, 1, -1441778, 0, 1, -1441777, 0, 1, -1441776, 0, 1, -1441775, 0, 1, -1441774, 0, 1, -1441773, 0, 1, -1441772, 0, 1, -1441771, 0, 1, -1441770, 0, 1, -1441769, 0, 1, -1441768, 0, 1, -1441767, 0, 1, -1441766, 0, 1, -1441765, 0, 1, -1507300, 0, 1, -1507299, 0, 1, -1507298, 0, 1, -1507297, 0, 1, -1507296, 0, 1, -1441759, 0, 1, -1441758, 0, 1, -1441757, 0, 1, -1441756, 0, 1, -1441755, 0, 1, -1376219, 0, 1, -1376218, 0, 1, -1376217, 0, 1, -1376216, 0, 1, -1376215, 0, 1, -1376214, 0, 1, -1376213, 0, 1, -1376212, 0, 1, -1376211, 0, 1, -1376210, 0, 1, -1376209, 0, 1, -1376208, 0, 1, -1441743, 0, 1, -1441742, 0, 1, -1441741, 0, 1, -1441740, 0, 1, -1441739, 0, 1, -1441738, 0, 1, -1507273, 0, 1, -1507272, 0, 1, -1507271, 0, 1, -1507270, 0, 1, -1507269, 0, 1, -1507268, 0, 1, -1507267, 0, 1, -1507266, 0, 1, -1507265, 0, 1, -1572800, 0, 1, -1507264, 0, 1, -1572799, 0, 1, -1507262, 0, 1, -1507261, 0, 1, -1507260, 0, 1, -1507259, 0, 1, -1507258, 0, 1, -1507257, 0, 1, -1507256, 0, 1, -1507255, 0, 1, -1507254, 0, 1, -1507253, 0, 1, -1507252, 0, 1, -1507251, 0, 1, -1507250, 0, 1, -1507249, 0, 1, -1507248, 0, 1, -1507247, 0, 1, -1441711, 0, 1, -1441710, 0, 1, -1441709, 0, 1, -1441708, 0, 1, -1441707, 0, 1, -1441706, 0, 1, -1441705, 0, 1, -1441704, 0, 1, -1441703, 0, 1, -1441702, 0, 1, -1441701, 0, 1, -1441700, 0, 1, -1441699, 0, 1, -1441698, 0, 1, -1441697, 0, 1, -1441696, 0, 1, -1507231, 0, 1, -1507230, 0, 1, -1507229, 0, 1, -1507228, 0, 1, -1507227, 0, 1, -1507226, 0, 1, -1507225, 0, 1, -1507224, 0, 1, -1507223, 0, 1, -1507222, 0, 1, -1507221, 0, 1, -1507220, 0, 1, -1441684, 0, 1, -1441683, 0, 1, -1441682, 0, 1, -1441681, 0, 1, -1441680, 0, 1, -1441679, 0, 1, -1441678, 0, 1, -1376141, 0, 1, -1376140, 0, 1, -1376139, 0, 1, -1376138, 0, 1, -1310602, 0, 1, -1310601, 0, 1, -1310600, 0, 1, -1245064, 0, 1, -1245063, 0, 1, -1179527, 0, 1, -1179526, 0, 1, -1113990, 0, 1, -1048453, 0, 1, -982916, 0, 1, -917379, 0, 1, -851843, 0, 1, -851842, 196608, 4, 524418, 0, 1, 589954, 0, 1, 655489, 0, 1, 721024, 0, 1, 786559, 0, 1, 852094, 0, 1, 852093, 0, 1, 917629, 0, 1, 917628, 0, 1, 983163, 0, 1, 983162, 0, 1, 1048698, 0, 1, 1048697, 0, 1, 1114233, 0, 1, 1114232, 0, 1, 1179768, 0, 1, 1179767, 0, 1, 1245302, 0, 1, 1245301, 0, 1, 1245300, 0, 1, 1310835, 0, 1, 1310834, 0, 1, 1310833, 0, 1, 1310832, 0, 1, 1310831, 0, 1, 1376366, 0, 1, 1376365, 0, 1, 1376364, 0, 1, 1376363, 0, 1, 1376362, 0, 1, 1441897, 0, 1, 1441896, 0, 1, 1441895, 0, 1, 1441894, 0, 1, 1441893, 0, 1, 1507428, 0, 1, 1507427, 0, 1, 1507426, 0, 1, 1507425, 0, 1, 1507424, 0, 1, 1507423, 0, 1, 1507422, 0, 1, 1572958, 0, 1, 1572957, 0, 1, 1572956, 0, 1, 1572955, 0, 1, 1572954, 0, 1, 1572953, 0, 1, 1572952, 0, 1, 1572951, 0, 1, 1572950, 0, 1, 1572949, 0, 1, 1507412, 0, 1, 1507411, 0, 1, 1507410, 0, 1, 1507409, 0, 1, 1507408, 0, 1, 1507407, 0, 1, 1507406, 0, 1, 1507405, 0, 1, 1507404, 0, 1, 1441868, 0, 1, 1441867, 0, 1, 1441866, 0, 1, 1441865, 0, 1, 1441864, 0, 1, 1441863, 0, 1, 1441862, 0, 1, 1441861, 0, 1, 1441860, 0, 1, -851841, 196608, 4, -851840, 196608, 4, -786304, 196608, 4, -786303, 196608, 4, -720767, 196608, 4, -655231, 196608, 4, -655232, 196608, 4, -589696, 196608, 4, -524160, 196608, 4, -458624, 196608, 4, -393088, 196608, 4, -327552, 196608, 4, -327551, 196608, 4, -262015, 196608, 4, -196479, 196608, 4, -130943, 196608, 4, -65407, 196608, 4, -65406, 196608, 4, 130, 196608, 4, 65666, 196608, 4, 131202, 196608, 4, 196738, 196608, 4, 196739, 196608, 4, 262275, 196608, 4, 327811, 196608, 4, 327810, 196608, 4, 393346, 196608, 4, 393347, 196608, 4, 458883, 196608, 4, 524419, 196608, 4, 393348, 196608, 4, 327812, 196608, 4, 262276, 196608, 4, 196740, 196608, 4, 131203, 196608, 4, 65667, 196608, 4, 131, 196608, 4, -65405, 196608, 4, -130941, 196608, 4, -196477, 196608, 4, -196478, 196608, 4, -262014, 196608, 4, -393087, 196608, 4, -720768, 196608, 4, -589695, 196608, 4, -524159, 196608, 4, -458623, 196608, 4, -327550, 196608, 4, -393086, 196608, 4, -458622, 196608, 4, -655230, 196608, 4, -720766, 196608, 4, -917376, 196608, 4, -917377, 196608, 4, -917378, 196608, 4, -982914, 196608, 4, -1048451, 196608, 4, -1048450, 196608, 4, -524158, 196608, 4, 65668, 196608, 4, -130942, 196608, 4)

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("8_5vw27")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(2019, -195, 2085, 137, 2170, 216, 2006, -343, 1920, -315, 2025, -214)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
texture = ExtResource("9_kek77")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
position = Vector2(1317, 0)
texture = ExtResource("9_kek77")

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
position = Vector2(2000, 0)
texture = ExtResource("9_kek77")

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
position = Vector2(2000, 0)
texture = ExtResource("9_kek77")

[connection signal="body_entered" from="Player/Area2D" to="Player/Area2D" method="_on_body_entered"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
